# parseVK

./: .ai-factory.json  .dockerignore  .env.example  .env.production.example  .gitignore  .gitleaksignore  .lintstagedrc.js  .releaserc.json  AGENTS.md  ANALYTICS_INTEGRATION.md  ANALYTICS_QUICKSTART.md  BULLMQ_SETUP.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  DESIGN_SYSTEM.md  DOKPLOY_DEPLOY_SETUP.md  DOKPLOY_FRONTEND_SETUP.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  PHOTO_ANALYSIS_PLAN.md  PRODUCT.md  PR_BODY.md  README.md  SECURITY.md  SETUP_CACHE.md  create-session.js  deploy.sh  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  opencode.json  package-lock.json  package.json  pyproject.toml  skills-lock.json  start-monitoring.sh
libs/py/common/: pyproject.toml
libs/py/common/common/: __init__.py  errors.py  events.py  headers.py  logging.py  request_id.py  security.py  testing.py  tracing.py
libs/py/common/tests/: __init__.py  test_errors.py  test_event_schema.py  test_events.py  test_logging_redaction.py  test_schemas.py
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/clients/: base.py  errors.py  internal.py
services/api-gateway/app/core/: config.py  exceptions.py  http_error_handler.py  (+5 more)
services/api-gateway/tests/: _monitoring_compatibility_helpers.py  _service_path.py  test_admin_users.py  test_auth_gateway.py  test_base_foundation.py  test_comments_error_router.py  test_comments_router.py  test_comments_service.py  test_content_gateway.py  test_csrf.py  test_friends_export_service.py  test_health.py  test_im_gateway.py  test_internal_client.py  test_jwt_validation.py  test_keywords_gateway.py  test_listings_gateway.py  test_metrics.py  test_monitoring_compatibility.py  test_ok_friends_adapter.py  test_photo_analysis_gateway.py  test_redaction_gateway.py  test_tasks_gateway.py  test_telegram_tgmbase_gateway.py  test_vk_friends_adapter.py  test_watchlist_gateway.py
services/content-service/: Dockerfile  README.md  pyproject.toml
services/content-service/alembic/: env.py
services/content-service/app/: bootstrap.py  main.py
services/content-service/tests/: test_application_services.py  test_config_contract.py  test_content_api.py  test_content_command_contracts.py  test_content_services_unit.py  test_dependencies.py  test_domain_contracts.py  test_event_contracts.py  test_health.py  test_im_event_consumer.py  test_infrastructure_clients.py  test_infrastructure_models.py  test_kafka_transport.py  test_listings_api.py  test_listings_service.py  test_migration_contract.py  test_migration_trigram.py  test_migrations.py  test_monitoring.py  test_monitoring_repository.py  test_projection_consumer.py  test_search.py  test_telegram_tgmbase.py  test_telegram_tgmbase_components.py
services/identity-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/identity-service/alembic/: env.py
services/identity-service/app/: cli.py  main.py
services/identity-service/tests/: __init__.py  test_admin_users_api.py  test_auth_api.py  test_auth_service.py  test_health.py  test_identity_events.py  test_integration_kafka.py  test_jwt.py  test_outbox_publisher.py  test_outbox_repository.py  test_password_hashing.py  test_seed_admin.py  test_users_service.py
services/im-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/im-service/alembic/: env.py
services/im-service/app/: main.py
services/im-service/docs/: migration-repair-rollout.md
services/im-service/scripts/: backfill_im_group_id.py  migrate_monitoring_groups.py  validate_alembic_graphs.py
services/im-service/tests/: _service_path.py  conftest.py  test_api_client.py  test_backfill.py  test_clients.py  test_health.py  test_keywords.py  test_migrations.py  test_monitoring_groups.py  test_monitoring_groups_db.py  test_notifier.py  test_outbox_repository_db.py  test_outbox_v2.py  test_poller.py  test_replay_processor.py  test_sanitization.py  test_search.py  test_security.py  test_tasks_consumer.py
services/listings-service/: Dockerfile  pyproject.toml
services/listings-service/alembic/: env.py
services/listings-service/app/: main.py
services/listings-service/tests/: test_listings_api.py  test_listings_service.py  test_schemas.py
services/moderation-service/: Dockerfile  pyproject.toml
services/moderation-service/app/: main.py
services/moderation-service/tests/: test_content_api.py  test_keyword_matcher_contract.py  test_keywords.py  test_moderation_service.py  test_photo_analysis.py  test_projection_consumer.py  test_projection_contract.py  test_watchlist.py
services/tasks-service/: Dockerfile  pyproject.toml
services/tasks-service/alembic/: env.py
services/tasks-service/app/: __init__.py  bootstrap.py  main.py
services/tasks-service/tests/: test_automation_api.py  test_automation_scheduler.py  test_background_workers.py  test_domain_exceptions.py  test_event_schemas.py  test_execution_service.py  test_health.py  test_outbox.py  test_task_execution_api.py  test_task_models.py  test_task_state_service.py  test_tasks_api.py
services/telegram-service/: .env.example  Dockerfile  pyproject.toml
services/telegram-service/app/: main.py
services/telegram-service/tests/: _service_path.py  test_telegram_service.py  test_telegram_tgmbase.py
services/vk-service/: Dockerfile  README.md  pyproject.toml
services/vk-service/alembic/: env.py
services/vk-service/app/: bootstrap.py  main.py
services/vk-service/tests/: _service_path.py  conftest.py  task_executor_fakes.py  test_bootstrap.py  test_db_idempotency.py  test_health.py  test_ingestion.py  test_integration_kafka.py  test_models.py  test_ok_api_client.py  test_ok_friends_service.py  test_outbox_publisher.py  test_redaction.py  test_supervise.py  test_task_consumer.py  test_task_executor.py  test_task_worker.py  test_tasks_client.py  test_vk_api_client.py  test_vk_api_errors.py  test_vk_error_212.py  test_vk_friends_service.py  test_vk_outbox.py  test_vk_timeout_session.py
(+3907 files in other folders)
