[project]
name = "parsevk-identity-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
