[project]
name = "parsevk-im-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.14,<1.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30",
  "prometheus-fastapi-instrumentator>=6.0",
  "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23", "respx>=0.22", "testcontainers>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
