[project]
name = "parsevk-moderation-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.14,<1.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30",
  "pymorphy3>=2.0",
  "pymorphy3-dicts-ru>=2.4",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
