[project]
name = "parsevk-telegram-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "telethon>=1.38",
  "python-socks>=2.4",
  "openpyxl>=3.1",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "python-multipart>=0.0.29",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
