[project]
name = "parsevk-telegram-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "httpx>=0.27",
  "openpyxl>=3.1.5",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.18",
  "python_socks>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "telethon>=1.34",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
