[project]
name = "parsevk-vk-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.14,<1.0",
  "aiosqlite>=0.22.1",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30",
  "vk_api>=11.9",
  "openpyxl>=3.1.5",
  "python-multipart>=0.0.18",
  "prometheus-fastapi-instrumentator>=6.0",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.23", "testcontainers>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
